--- a/body positivity website/mission_statement.html
+++ b/body positivity website/mission_statement.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Our Mission Statement</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    "<a href="slide3\slide3.html">Next</a>"
   </head>
   <body>
     <h1>Our Mission</h1>
