--- a/body positivity website/bdd.html
+++ b/body positivity website/bdd.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <title>Body Dismorphic Disorder</title>
+    "<a href="slide5.html"> Go back </a>
+    "<a href="ways_to_love_yourself.html"> Next </a> 
   </head>
   <body>
     <h1>Body Dismorphic Disorder (BDD)</h1>
