--- a/body positivity website/resources.html
+++ b/body positivity website/resources.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Resources</title>
+    "<a href="ways_to_love_yourself.html"> Go back </a>
   </head>
   <body>
     <h1>Other Blogs</h1>
