--- a/body positivity website/slide5.html
+++ b/body positivity website/slide5.html
@@ -8,6 +8,9 @@
     <title> Body Positive ! </title>
     <link rel="stylesheet" href="5style.css">
     <link <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    "<a href="slide4.html"> Go back </a>
+    "<a href="bdd.html"> Next </a>
+
 
   </head>
 
