--- a/body positivity website/ways_to_love_yourself.html
+++ b/body positivity website/ways_to_love_yourself.html
@@ -5,6 +5,8 @@
     <title>Build Your Confidence</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="ways_to_love_yourself.css">
+    "<a href="bdd.html"> Go back </a>
+    "<a href="resources.html" > Next </a>
   </head>
   <body>
     <h1>How to Build Your Confidence</h1>
