--- a/body positivity website/mission_statement.html
+++ b/body positivity website/mission_statement.html
@@ -4,12 +4,25 @@
     <meta charset="utf-8">
     <title>Our Mission Statement</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    "<a href="slide3.html">Next</a>"
+
   </head>
   <body>
+    <a href="">
+      <button type="button" class="btn btn-default" aria-label="Left Align">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      </button>
+    </a>
+    <a href="slide3.html">
+      <button type="button" class="btn btn-default" aria-label="Left Align">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      </button>
+    </a>
+
     <h1>Our Mission</h1>
     <img src="" alt="picture of us">
     <p> We are a group of high schoolers who feel very passionate about body positivity and loving yourself. As teenagers living in 2017, we have all felt like we aren’t good enough, whether that be in mind or body.</p>
     <p>By creating this website, we hope to promote body positivity and raise awareness for those who suffer from body image issues. We hope this will inspire others to feel better about who they are and how they look.</p>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+  
   </body>
 </html>
