--- a/body positivity website/slide3.html
+++ b/body positivity website/slide3.html
@@ -1,19 +1,29 @@
-<!DOCTYPE  hmtl >
+<!DOCTYPE html >
 
-<hmtl>
+<html>
 
   <head>
 
     <meta charset="utf-8">
     <title> Body Positive ! </title>
     <link rel="stylesheet" href="3style.css">
-    <link <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-    "<a href="mission_statement.html"> Go back </a>
-    "<a href="slide4.html">Next</a>"
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 
   </head>
 
 <body>
+  <a href="mission_statement.html">
+    <button type="button" class="btn btn-default" aria-label="Left Align">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true">
+      </span>
+    </button>
+  </a>
+  <a href="slide4.html">
+    <button type="button" class="btn btn-default" aria-label="Left Align">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true">
+      </span>
+    </button>
+  </a>
 
   <div class="container">
   <img src="Bodypos.jpg" class="rounded mx-auto d-block" alt="campaign picture" height = "360">
@@ -24,7 +34,6 @@
 </p>
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-
 
 
 </body>
