--- a/body positivity website/slide4.html
+++ b/body positivity website/slide4.html
@@ -1,6 +1,6 @@
-<!DOCTYPE  hmtl >
+<!DOCTYPE  html >
 
-<hmtl>
+<html>
 
   <head>
 
@@ -8,16 +8,33 @@
     <title> Body Positive ! </title>
     <link rel="stylesheet" href="4style.css">
     <link <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-    "<a href="slide3.html"> Go back </a>
-    "<a href="slide5.html"> Next </a>
 
 
   </head>
 
 <body>
+
+  <a href="slide3.html">
+    <button type="button" class="btn btn-default" aria-label="Left Align">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true">
+      </span>
+    </button>
+  </a>
+  <a href="slide5.html">
+    <button type="button" class="btn btn-default" aria-label="Left Align">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true">
+      </span>
+    </button>
+  </a>
+
   <div class="container">
   <img src="demi.jpg" class="rounded mx-auto d-block" alt="campaign picture" height = "360">
   </div>
 
 <div class= "demi">
   <p> As a young girl, Demi Lovato found herself unhappy with her body. Even before she became a celebrity she felt insecure about the way her body was changing and had body image issues. Lovato believed she was “too big” and began purging. She did not like the way she looked because her body was different from the celebrities she would see on TV and magazines. At the age of 18, she checked herself into rehab because she realized it was not okay for her to feel that way. She was diagnosed with bulimia and bipolar disorder. Now, Demi Lovato is one of the advocates of body positivity. She encourages women to empower themselves physically, mentally, and spiritually by learning to be grateful for their bodies and taking care of them. Demi Lovato is just one of the many people that struggled with being confident in their bodies and is an example to many young women. If Demi Lovato can do it, so can you! </p>
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+
+</body>
+</html>
