--- a/body positivity website/resources.html
+++ b/body positivity website/resources.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
+
 <html>
+
   <head>
+
     <meta charset="utf-8">
     <title>Resources</title>
-    "<a href="ways_to_love_yourself.html"> Go back </a>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
   </head>
+
   <body>
+
+    <a href="ways_to_love_yourself.html">
+      <button type="button" class="btn btn-default" aria-label="Left Align">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      </button>
+    </a>
+
+    <a href="aboutus.html">
+      <button type="button" class="btn btn-default" aria-label="Left Align">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      </button>
+    </a>
+
     <h1>Other Blogs</h1>
     <ul>
       <li><a href="https://www.bustle.com/articles/121093-13-body-positive-bloggers-to-turn-to-when-youre-feeling-crummy-about-your-body">Bustle's</a> 13 Body Positive Instagram Recommendations'</li>
@@ -29,5 +47,8 @@
       <li><a href="https://www.bustle.com/articles/112271-14-little-ways-to-feel-more-self-confident-every-day">Bustle</a></li>
       <li><a href="https://www.fitnessmagazine.com/workout/real-plans/celebrity/demi-lovato/">Fitness Magazine</a></li>
     </ul>
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+  
   </body>
 </html>
