--- a/body positivity website/slide3.html
+++ b/body positivity website/slide3.html
@@ -7,23 +7,31 @@
     <meta charset="utf-8">
     <title> Body Positive ! </title>
     <link rel="stylesheet" href="3style.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
   </head>
 
 <body>
+
+  <div class = "left">
+
   <a href="mission_statement.html">
     <button type="button" class="btn btn-default" aria-label="Left Align">
       <span class="glyphicon glyphicon-chevron-left" aria-hidden="true">
       </span>
     </button>
   </a>
+</div>
+
+  <div class= "right">
+
   <a href="slide4.html">
     <button type="button" class="btn btn-default" aria-label="Left Align">
       <span class="glyphicon glyphicon-chevron-right" aria-hidden="true">
       </span>
     </button>
   </a>
+</div>
 
   <div class="container">
   <img src="Bodypos.jpg" class="rounded mx-auto d-block" alt="campaign picture" height = "360">
