--- a/body positivity website/slide5.html
+++ b/body positivity website/slide5.html
@@ -1,21 +1,32 @@
-<!DOCTYPE  html >
-
+<!DOCTYPE html>
 <html>
-
   <head>
 
     <meta charset="utf-8">
-    <title> Body Positive ! </title>
+    <title>Body Positive!</title>
     <link rel="stylesheet" href="5style.css">
-    <link <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-    "<a href="slide4.html"> Go back </a>
-    "<a href="bdd.html"> Next </a>
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
   </head>
 
-<body>
+  <body>
 
-  <div class="container">
-  <img src="quote.jpg" class="img-fluid" alt="Responsive image" width = "1500">
-  </div>
+    <a href="slide4.html">
+    <button type="button" class="btn btn-default" aria-label="Left Align">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    </button>
+    </a>
+
+    <a href="bdd.html">
+    <button type="button" class="btn btn-default" aria-label="Left Align">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    </button>
+    </a>
+    <div class="container">
+    <img src="quote.jpg" class="img-fluid" alt="Responsive image" width = "1500">
+    </div>
+    
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+
+  </body>
+</html>
