--- a/body positivity website/ways_to_love_yourself.html
+++ b/body positivity website/ways_to_love_yourself.html
@@ -5,10 +5,22 @@
     <title>Build Your Confidence</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="ways_to_love_yourself.css">
-    "<a href="bdd.html"> Go back </a>
-    "<a href="resources.html" > Next </a>
+
   </head>
+
   <body>
+
+  <a href="bdd.html">
+    <button type="button" class="btn btn-default" aria-label="Left Align">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    </button>
+  </a>
+  <a href="resources.html">
+    <button type="button" class="btn btn-default" aria-label="Left Align">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    </button>
+  </a>
+
     <h1>How to Build Your Confidence</h1>
     <div class="">
       <img src="http://www.comedycentral.co.uk/sites/default/files/styles/image-w-1200-h-600-scale-crop/public/mtv_uk/arc/2014/05/27/f8bf5a4f-0745-45e6-b57a-3cc95f1bd3cf.jpg?itok=neQ-BYZn" alt="friends">
@@ -36,5 +48,8 @@
       <p>1) You pass thousands of people every day: on the street, on the subway, at work or school. At least one of those people has thought something complimentary about you. Your hair looks great, those pants flatter you really well, your shirt is super nice, your eyes pop spectacularly, etc.</p>
       <p>2) More than half of those people won’t even have taken notice of you or whatever you’re uncomfortable about. Everyone is way too wrapped up with being concerned about their own insecurities to judge other people.</p>
     </div>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    
   </body>
 </html>
