--- a/body positivity website/aboutus.html
+++ b/body positivity website/aboutus.html
@@ -2,36 +2,51 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="swipe.js">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <link rel="stylesheet" href="about.css">
+    <link href="https://fonts.googleapis.com/css?family=Amaranth|Hind|Leckerli+One" rel="stylesheet">
+      <title>About Us</title>
+
   </head>
 
   <body>
 
-    <a href= "resources.html">
+    <a href= "resources.html" class= "left">
         <button type="button" class="btn btn-default" aria-label="Left Align">
           <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
         </button>
       </a>
 
-    <h1>About Us</h1>
-      <p>Meet the creators of _________!</p>
-
+      <h1>About Us</h1>
+        <h3>Meet the creators of Luv URself!</h3>
     <h2>Natalie Cohen</h2>
-      <img src="natalie.jpg" alt="natalie">
-      I am currently a 17 year old rising senior attending James Madison High School in Brooklyn. I joined Girls Who Code because I greatly enjoyed the two coding classes I took in school, and wanted to learn more about the subject. The world is moving in the direction of technology, and I wish to be a part of it. I love to read, play video games, hang out with friends, and snack on sweets in my free time, when I’m not stressing out over school.
+    <div class="natalie">
+      <img src="natalie.jpg" class="img-circle" alt="natalie" style="width:200x;height:200px;">
+    </div>
+      <p>
+      I am currently a 17 year old rising senior attending James Madison High School in Brooklyn. I joined Girls Who Code because I greatly enjoyed the two coding classes I took in school, and wanted to learn more about the subject. The world is moving in the direction of technology, and I wish to be a part of it. I love to read, play video games, hang out with friends, and snack on sweets in my free time, when I’m not stressing out over school. </p>
 
-    <h2>Marisleysis de la Cruz</h2>
-      <img src="mari.jpg" alt="mari">
-      I am currently a 15 year old rising junior attending the High School of American Studies at Lehman College in the Bronx. I joined Girls Who Code because of how much my brother enjoyed it. Ever since I was a young girl I liked to work with computers and since my computer always got viruses I would always try to remove them. I chose to do this project because I myself struggled with being body-confident and think it’s important to learn to appreciate your body.
+    <h2>Marisleysis De La Cruz</h2>
+    <div class="">
+      <img src="mari.jpg" class="img-circle" alt="mari" style="width:200px;height:200px;">
+    </div>
+    <p>
+      I am currently a 15 year old rising junior attending the High School of American Studies at Lehman College in the Bronx. I joined Girls Who Code because of how much my brother enjoyed it. Ever since I was a young girl I liked to work with computers and since my computer always got viruses I would always try to remove them. I chose to do this project because I myself struggled with being body-confident and think it’s important to learn to appreciate your body. </p>
 
     <h2>Kyla Garcia</h2>
-      <img src="kyla.jpg" alt="kyla">
-      I am currently 17 years old and attend the High School of American Studies at Lehman College in the Bronx. I joined Girls Who Code because I wanted to explore the different careers within the STEM field. Furthermore, my family is very involved with computers and I wanted to learn more about them. I love drawing, listening to music, cooking, and hanging out with my friends.
+    <div class="">
+      <img src="kyla.jpg" class="img-circle" alt="kyla" style="width:200px;height:200px;">
+    </div>
+    <p>
+      I am currently 17 years old and attend the High School of American Studies at Lehman College in the Bronx. I joined Girls Who Code because I wanted to explore the different careers within the STEM field. Furthermore, my family is very involved with computers and I wanted to learn more about them. I love drawing, listening to music, cooking, and hanging out with my friends. </p>
 
     <h2>Drisha Mishra</h2>
-      <img src="drisha.jpg" alt="drisha">
+    <div class="">
+      <img src="drisha.jpg" class="img-circle" alt="drisha" style="width:200px;height:200px;">
+    </div>
+      <p></p>
 
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-  
   </body>
 </html>
