--- a/body positivity website/ways_to_love_yourself.html
+++ b/body positivity website/ways_to_love_yourself.html
@@ -2,20 +2,23 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Build Your Confidence</title>
+    <title>How to Build Your Confidence</title>
+    <link rel="stylesheet" href="swipe.js">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <link rel="stylesheet" href="ways_to_love_yourself.css">
+    <link href="https://fonts.googleapis.com/css?family=Amaranth|Hind|Leckerli+One" rel="stylesheet">
 
   </head>
 
   <body>
 
-  <a href="bdd.html">
+  <a href="bdd.html" class="left">
     <button type="button" class="btn btn-default" aria-label="Left Align">
       <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
     </button>
   </a>
-  <a href="resources.html">
+  <a href="resources.html" class="right">
     <button type="button" class="btn btn-default" aria-label="Left Align">
       <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
     </button>
@@ -49,7 +52,5 @@
       <p>2) More than half of those people won’t even have taken notice of you or whatever you’re uncomfortable about. Everyone is way too wrapped up with being concerned about their own insecurities to judge other people.</p>
     </div>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-    
   </body>
 </html>
