--- a/body positivity website/resources.html
+++ b/body positivity website/resources.html
@@ -6,19 +6,23 @@
 
     <meta charset="utf-8">
     <title>Resources</title>
+      <link rel="stylesheet" href="swipe.js">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <link rel="stylesheet" href= "resources.css">
+    <link href="https://fonts.googleapis.com/css?family=Amaranth|Hind|Leckerli+One" rel="stylesheet">
 
   </head>
 
   <body>
 
-    <a href="ways_to_love_yourself.html">
+    <a href="ways_to_love_yourself.html" class= left>
       <button type="button" class="btn btn-default" aria-label="Left Align">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"> </span>
       </button>
     </a>
 
-    <a href="aboutus.html">
+    <a href="aboutus.html" class="right">
       <button type="button" class="btn btn-default" aria-label="Left Align">
         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
       </button>
@@ -48,7 +52,5 @@
       <li><a href="https://www.fitnessmagazine.com/workout/real-plans/celebrity/demi-lovato/">Fitness Magazine</a></li>
     </ul>
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-  
   </body>
 </html>
