--- a/body positivity website/slide3.html
+++ b/body positivity website/slide3.html
@@ -6,33 +6,30 @@
 
     <meta charset="utf-8">
     <title> Body Positive ! </title>
+    <link rel="stylesheet" href="swipe.js">
     <link rel="stylesheet" href="3style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Amaranth:700|Hind|Leckerli+One" rel="stylesheet">
 
   </head>
 
 <body>
 
-  <div class = "left">
-
-  <a href="mission_statement.html">
+  <a href="mission_statement.html" class= "left">
     <button type="button" class="btn btn-default" aria-label="Left Align">
       <span class="glyphicon glyphicon-chevron-left" aria-hidden="true">
       </span>
     </button>
   </a>
-</div>
 
-  <div class= "right">
-
-  <a href="slide4.html">
+  <a href="slide4.html" class = "right">
     <button type="button" class="btn btn-default" aria-label="Left Align">
       <span class="glyphicon glyphicon-chevron-right" aria-hidden="true">
       </span>
     </button>
   </a>
-</div>
 
+  <h1>Why Girls Should Love Themselves</h1>
   <div class="container">
   <img src="Bodypos.jpg" class="rounded mx-auto d-block" alt="campaign picture" height = "360">
   </div>
