--- a/body positivity website/slide5.html
+++ b/body positivity website/slide5.html
@@ -5,19 +5,21 @@
     <meta charset="utf-8">
     <title>Body Positive!</title>
     <link rel="stylesheet" href="5style.css">
+    <link rel="stylesheet" href="swipe.js">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Amaranth:700|Hind|Leckerli+One" rel="stylesheet">
 
   </head>
 
   <body>
 
-    <a href="slide4.html">
+    <a href="slide4.html" class="left">
     <button type="button" class="btn btn-default" aria-label="Left Align">
       <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
     </button>
     </a>
 
-    <a href="bdd.html">
+    <a href="bdd.html" class="right">
     <button type="button" class="btn btn-default" aria-label="Left Align">
       <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
     </button>
@@ -25,7 +27,7 @@
     <div class="container">
     <img src="quote.jpg" class="img-fluid" alt="Responsive image" width = "1500">
     </div>
-    
+
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 
   </body>
