--- a/slide3.html
+++ b/slide3.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <title> Body Positive ! </title>
     <link rel="stylesheet" href="swipe.js">
-    <link rel="stylesheet" href="3style.css">
+    <link rel="stylesheet" href="slide3.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Amaranth:700|Hind|Leckerli+One" rel="stylesheet">
 
