--- a/slide5.html
+++ b/slide5.html
@@ -4,7 +4,7 @@
 
     <meta charset="utf-8">
     <title>Body Positive!</title>
-    <link rel="stylesheet" href="5style.css">
+    <link rel="stylesheet" href="slide5.css">
     <link rel="stylesheet" href="swipe.js">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Amaranth:700|Hind|Leckerli+One" rel="stylesheet">
