Update and rename ways_to_love_yourself.html to slide7.html

--- a/slide7.html
+++ b/slide7.html
@@ -13,12 +13,12 @@
 
   <body>
 
-  <a href="bdd.html" class="left">
+  <a href="slide6.html" class="left">
     <button type="button" class="btn btn-default" aria-label="Left Align">
       <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
     </button>
   </a>
-  <a href="resources.html" class="right">
+  <a href="slide9.html" class="right">
     <button type="button" class="btn btn-default" aria-label="Left Align">
       <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
     </button>
