--- a/slide7.html
+++ b/slide7.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="swipe.js">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-    <link rel="stylesheet" href="ways_to_love_yourself.css">
+    <link rel="stylesheet" href="slide7.css">
     <link href="https://fonts.googleapis.com/css?family=Amaranth|Hind|Leckerli+One" rel="stylesheet">
 
   </head>
