--- a/slide10.html
+++ b/slide10.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="swipe.js">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="slide10.css">
     <link href="https://fonts.googleapis.com/css?family=Amaranth|Hind|Leckerli+One" rel="stylesheet">
       <title>About Us</title>
 
@@ -13,7 +13,7 @@
 
   <body>
 
-    <a href= "resources.html" class= "left">
+    <a href= "slide9.html" class= "left">
         <button type="button" class="btn btn-default" aria-label="Left Align">
           <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
         </button>
