--- a/slide2.html
+++ b/slide2.html
@@ -11,7 +11,7 @@
   </head>
   <body>
 
-    <a href="" class="left">
+    <a href="index.html" class="left">
       <button type="button" class="btn btn-default" aria-label="Left Align">
         <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
       </button>
