--- a/slide3.html
+++ b/slide3.html
@@ -15,7 +15,7 @@
 
 <body>
 
-  <a href="mission_statement.html" class= "left">
+  <a href="slide2.html" class= "left">
     <button type="button" class="btn btn-default" aria-label="Left Align">
       <span class="glyphicon glyphicon-chevron-left" aria-hidden="true">
       </span>
