--- a/slide5.html
+++ b/slide5.html
@@ -19,7 +19,7 @@
     </button>
     </a>
 
-    <a href="bdd.html" class="right">
+    <a href="slide6.html" class="right">
     <button type="button" class="btn btn-default" aria-label="Left Align">
       <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
     </button>
