--- a/slide6.html
+++ b/slide6.html
@@ -17,7 +17,7 @@
       <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
     </button>
   </a>
-  <a href="ways_to_love_yourself.html" class="right">
+  <a href="slide7.html" class="right">
     <button type="button" class="btn btn-default" aria-label="Left Align">
       <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
     </button>
