--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-yo
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+    <a href="slide2.html" class="right">
+      <button type="button" class="btn btn-default" aria-label="Left Align">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      </button>
+    </a>
+
+  </body>
+</html>
+
