--- a/slide10.html
+++ b/slide10.html
@@ -46,7 +46,7 @@
     <div class="">
       <img src="drisha.jpg" class="img-circle" alt="drisha" style="width:200px;height:200px;">
     </div>
-      <p> I am currently 17 years old rising senior attending Mount Olive High School in New jersey. I joined Girls Who Code because I had always been interested in computer science but never had the entors or guidance to actually pursue it. I chose to do this project because since I was a little girl I have struggled with my body and loving myself and I believe everyone is special and unique in their own way and should embrace that.
+      <p> I am currently 17 years old and a rising senior attending Mount Olive High School in New Jersey. I joined Girls Who Code because I have always been interested in computer science, but never had the mentors or guidance to actually pursue it. I chose to do this project because since I was a little girl I have struggled with my body and loving myself and I believe everyone is special and unique in their own way and should embrace that.
 </p>
 
   </body>
