--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
       </button>
     </a>
-
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
   </body>
 </html>
-
