--- a/index.html
+++ b/index.html
@@ -2,17 +2,32 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="swipe.js">
+    <link rel="stylesheet" href="">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-    <title></title>
+    <link rel= "stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Amaranth:700|Hind|Leckerli+One" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="jquery.fullPage.css" />
+ <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <title> Love Yourself! </title>
   </head>
   <body>
+    <h1> Luv Yourself &#9829;</h1>
     <a href="slide2.html" class="right">
       <button type="button" class="btn btn-default" aria-label="Left Align">
         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
       </button>
     </a>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <!--Script to link jquery.fullPage.js-->
+    <script type="text/javascript" src="jquery.fullPage.js"></script>
+    <!--Script for fullpage.js-->
+    <script type="text/javascript">
+      $(document).ready(function() {
+        $('#fullpage').fullpage({
+          bigSectionsDestination: top,
+          controlArrows: false,
+          anchors:['header', 'slide1', 'slide2', 'slide3', 'slide4', 'slide5', 'slide6']});});
+    </script>
+
   </body>
 </html>
