--- a/slide10.html
+++ b/slide10.html
@@ -2,22 +2,18 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="swipe.js">
+    <link rel="stylesheet" href="">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <link rel="stylesheet" href="slide10.css">
     <link href="https://fonts.googleapis.com/css?family=Amaranth|Hind|Leckerli+One" rel="stylesheet">
-      <title>About Us</title>
+    <link rel="stylesheet" type="text/css" href="jquery.fullPage.css" />
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <title>About Us</title>
 
   </head>
 
   <body>
-
-    <a href= "slide9.html" class= "left">
-        <button type="button" class="btn btn-default" aria-label="Left Align">
-          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        </button>
-      </a>
 
       <h1>About Us</h1>
         <h3>Meet the creators of Luv URself!</h3>
@@ -48,6 +44,23 @@
     </div>
       <p> I am currently 17 years old and a rising senior attending Mount Olive High School in New Jersey. I joined Girls Who Code because I have always been interested in computer science, but never had the mentors or guidance to actually pursue it. I chose to do this project because since I was a little girl I have struggled with my body and loving myself and I believe everyone is special and unique in their own way and should embrace that.
 </p>
+
+<a href= "slide9.html" class= "left">
+    <button type="button" class="btn btn-default" aria-label="Left Align">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    </button>
+  </a>
+
+<!--Script to link jquery.fullPage.js-->
+    <script type="text/javascript" src="jquery.fullPage.js"></script>
+    <!--Script for fullpage.js-->
+    <script type="text/javascript">
+      $(document).ready(function() {
+        $('#fullpage').fullpage({
+          bigSectionsDestination: top,
+          controlArrows: false,
+          anchors:['header', 'slide1', 'slide2', 'slide3', 'slide4', 'slide5', 'slide6']});});
+    </script>
 
   </body>
 </html>
