--- a/slide2.html
+++ b/slide2.html
@@ -3,30 +3,20 @@
   <head>
     <meta charset="utf-8">
     <title>Our Mission</title>
-    <link rel="stylesheet" href="swipe.js">
+    <link rel="stylesheet" href="">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="slide2.css">
     <link href="https://fonts.googleapis.com/css?family=Amaranth:700|Hind|Leckerli+One" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="jquery.fullPage.css" />
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
   </head>
   <body>
 
-    <a href="index.html" class="left">
-      <button type="button" class="btn btn-default" aria-label="Left Align">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      </button>
-    </a>
-    <a href="slide3.html" class="right">
-      <button type="button" class="btn btn-default" aria-label="Left Align">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      </button>
-    </a>
     <div id="heading">
     <h1>Our Mission</h1>
   </div>
-  <div id="pic">
-    <img src="" alt="picture of us">
-  </div>
+    <img src="" alt="picture of us" width= 450px height= 450px class = "pic">
     <br>
     <br>
     <br>
@@ -34,7 +24,28 @@
     <p> We are a group of high schoolers who feel very passionate about body positivity and loving yourself. As teenagers living in 2017, we have all felt like we aren’t good enough, whether that be in mind or body. <br> By creating this website, we hope to promote body positivity and raise awareness for those who suffer from body image issues. We hope this will inspire others to feel better about who they are and how they look.</p>
   </div>
 
+  <a href="index.html" class="left">
+    <button type="button" class="btn btn-default" aria-label="Left Align">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    </button>
+  </a>
+  <a href="slide3.html" class="right">
+    <button type="button" class="btn btn-default" aria-label="Left Align">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    </button>
+  </a>
+
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+  <!--Script to link jquery.fullPage.js-->
+    <script type="text/javascript" src="jquery.fullPage.js"></script>
+    <!--Script for fullpage.js-->
+    <script type="text/javascript">
+      $(document).ready(function() {
+        $('#fullpage').fullpage({
+          bigSectionsDestination: top,
+          controlArrows: false,
+          anchors:['header', 'slide1', 'slide2', 'slide3', 'slide4', 'slide5', 'slide6']});});
+    </script>
 
   </body>
 </html>
