--- a/slide4.html
+++ b/slide4.html
@@ -5,39 +5,67 @@
   <head>
 
     <meta charset="utf-8">
-    <title> Body Positive ! </title>
+    <title> Spotlight Story </title>
     <link rel="stylesheet" href="slide4.css">
-    <link rel="stylesheet" href="swipe.js">
+    <link rel="stylesheet" href="">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Amaranth:700|Hind|Leckerli+One" rel="stylesheet">
-
-
+    <link rel="stylesheet" type="text/css" href="jquery.fullPage.css" />
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
   </head>
 
 <body>
 
-  <a href="slide3.html" class= left>
-    <button type="button" class="btn btn-default" aria-label="Left Align">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true">
-      </span>
-    </button>
-  </a>
-  <a href="slide5.html" class="right">
-    <button type="button" class="btn btn-default" aria-label="Left Align">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true">
-      </span>
-    </button>
-  </a>
+<div id="fullpage">
+  <div class="section">
+    <h1>Spotlight Story</h1>
+      <div class="container">
+        <img src="demi.jpg" class="rounded mx-auto d-block" alt="campaign picture" width= 400 height = 500 >
+      </div>
+  </div>
 
-  <h1>Spotlight Story</h1>
-    <div class="container">
-      <img src="demi.jpg" class="rounded mx-auto d-block" alt="campaign picture" height = "360">
-    </div>
+<div class="section">
+  <p>As a young girl, Demi Lovato found herself unhappy with her body. Even before she became a celebrity she felt insecure about the way her body was changing and had body image issues. Lovato believed she was “too big” and began purging. She did not like the way she looked because her body was different from the celebrities she would see on TV and magazines. </p>
+</div>
 
-  <p> As a young girl, Demi Lovato found herself unhappy with her body. Even before she became a celebrity she felt insecure about the way her body was changing and had body image issues. Lovato believed she was “too big” and began purging. She did not like the way she looked because her body was different from the celebrities she would see on TV and magazines. At the age of 18, she checked herself into rehab because she realized it was not okay for her to feel that way. She was diagnosed with bulimia and bipolar disorder. Now, Demi Lovato is one of the advocates of body positivity. She encourages women to empower themselves physically, mentally, and spiritually by learning to be grateful for their bodies and taking care of them. Demi Lovato is just one of the many people that struggled with being confident in their bodies and is an example to many young women. If Demi Lovato can do it, so can you! </p>
+<div class="section">
+  <p>At the age of 18, she checked herself into rehab because she realized it was not okay for her to feel that way. She was diagnosed with bulimia and bipolar disorder. </p>
+</div>
+
+<div class="section">
+  <p> Now, Demi Lovato is one of the advocates of body positivity. She encourages women to empower themselves physically, mentally, and spiritually by learning to be grateful for their bodies and taking care of them. Demi Lovato is just one of the many people that struggled with being confident in their bodies and is an example to many young women. If Demi Lovato can do it, so can you! </p>
+</div>
+
+</div>
+
+<a href="slide3.html" class= left>
+  <button type="button" class="btn btn-default" aria-label="Left Align">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true">
+    </span>
+  </button>
+</a>
+<a href="slide5.html" class="right">
+  <button type="button" class="btn btn-default" aria-label="Left Align">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true">
+    </span>
+  </button>
+</a>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+
+
+  <!--Script to link jquery.fullPage.js-->
+    <script type="text/javascript" src="jquery.fullPage.js"></script>
+    <!--Script for fullpage.js-->
+    <script type="text/javascript">
+      $(document).ready(function() {
+        $('#fullpage').fullpage({
+          bigSectionsDestination: top,
+          controlArrows: false,
+          anchors:['header', 'slide1', 'slide2', 'slide3', 'slide4', 'slide5', 'slide6']});});
+    </script>
+
 
 </body>
 </html>
