--- a/slide6.html
+++ b/slide6.html
@@ -2,15 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
-      <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <link rel="stylesheet" href="slide6.css">
-    <link href="https://fonts.googleapis.com/css?family=Amaranth|Hind|Leckerli+One" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Josefin+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="jquery.fullPage.css" />
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
-    <title>Body Dismorphic Disorder</title>
+    <title>Luv Yourself</title>
 
   </head>
 
@@ -24,7 +24,7 @@
 The flaw is usually insignificant but those who suffer from BDD view their flaws as significant and prominent, often causing severe emotional distress and difficulties in daily functioning.<br>
 BDD mostly develops in adolescents and teens. Research shows that it affects men and women almost equally. About one percent of the U.S. population has BDD.<br>
 It is important to note that not everyone who deals with body image issues suffers from a mental disorder. Please keep this mind as you read the rest of this page.</p>
-</div>
+  </div>
 
 <div class="section">
   <h3>Causes</h3>
