--- a/slide10.html
+++ b/slide10.html
@@ -6,61 +6,56 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <link rel="stylesheet" href="slide10.css">
-    <link href="https://fonts.googleapis.com/css?family=Amaranth|Hind|Leckerli+One" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Josefin+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="jquery.fullPage.css" />
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <title>About Us</title>
+    <title>Luv Yourself</title>
 
   </head>
 
   <body>
 
       <h1>About Us</h1>
-        <h3>Meet the creators of Luv URself!</h3>
-    <h2>Natalie Cohen</h2>
+        <h3>Meet the creators of Luv Yourself!</h3>
+        <br>
+        <br>
+    <div class="nataliehead">
+      <h2>Natalie Cohen</h2>
+    </div>
     <div class="natalie">
       <img src="natalie.jpg" class="img-circle" alt="natalie" style="width:200x;height:200px;">
     </div>
-      <p>
-      I am currently a 17 year old rising senior attending James Madison High School in Brooklyn. I joined Girls Who Code because I greatly enjoyed the two coding classes I took in school, and wanted to learn more about the subject. The world is moving in the direction of technology, and I wish to be a part of it. I love to read, play video games, hang out with friends, and snack on sweets in my free time, when I’m not stressing out over school. </p>
+      <p>I am currently a 17 year old rising senior attending James Madison High School in Brooklyn. I joined Girls Who Code because I greatly enjoyed the two coding classes I took in school, and wanted to learn more about the subject. The world is moving in the direction of technology, and I wish to be a part of it. I love to read, play video games, hang out with friends, and snack on sweets in my free time, when I’m not stressing out over school. To contact me, click <a href="https://www.linkedin.com/in/natalie-cohen-a86b52145/">here.</a></p>
 
-    <h2>Marisleysis De La Cruz</h2>
-    <div class="">
+    <div class="marihead">
+      <h2>Marisleysis De La Cruz</h2>
+    </div>
+    <div class="mari">
       <img src="mari.jpg" class="img-circle" alt="mari" style="width:200px;height:200px;">
     </div>
-    <p>
-      I am currently a 15 year old rising junior attending the High School of American Studies at Lehman College in the Bronx. I joined Girls Who Code because of how much my brother enjoyed it. Ever since I was a young girl I liked to work with computers and since my computer always got viruses I would always try to remove them. I chose to do this project because I myself struggled with being body-confident and think it’s important to learn to appreciate your body. </p>
+    <p>I am currently a 15 year old rising junior attending the High School of American Studies at Lehman College in the Bronx. I joined Girls Who Code because of how much my brother enjoyed it. Ever since I was a young girl I liked to work with computers and since my computer always got viruses I would always try to remove them. I chose to do this project because I myself struggled with being body-confident and think it’s important to learn to appreciate your body. To contact me click <a href="https://www.linkedin.com/in/marisleysis-de-la-cruz-354b53145/">here.</a> </p>
 
-    <h2>Kyla Garcia</h2>
-    <div class="">
+    <div class="kylahead">
+      <h2>Kyla Garcia</h2>
+    </div>
+    <div class="kyla">
       <img src="kyla.jpg" class="img-circle" alt="kyla" style="width:200px;height:200px;">
     </div>
-    <p>
-      I am currently 17 years old and attend the High School of American Studies at Lehman College in the Bronx. I joined Girls Who Code because I wanted to explore the different careers within the STEM field. Furthermore, my family is very involved with computers and I wanted to learn more about them. I love drawing, listening to music, cooking, and hanging out with my friends. </p>
+      <p>I am currently 17 years old and attend the High School of American Studies at Lehman College in the Bronx. I joined Girls Who Code because I wanted to explore the different careers within the STEM field. Furthermore, my family is very involved with computers and I wanted to learn more about them. I love drawing, listening to music, cooking, and hanging out with my friends. To contact me click <a href="https://www.linkedin.com/in/kyla-garcia-3a4b53145/">here.</a></p>
 
-    <h2>Drisha Mishra</h2>
-    <div class="">
+    <div class="drishahead">
+      <h2>Drisha Mishra</h2>
+    </div>
+    <div class="drisha">
       <img src="drisha.jpg" class="img-circle" alt="drisha" style="width:200px;height:200px;">
     </div>
-      <p> I am currently 17 years old and a rising senior attending Mount Olive High School in New Jersey. I joined Girls Who Code because I have always been interested in computer science, but never had the mentors or guidance to actually pursue it. I chose to do this project because since I was a little girl I have struggled with my body and loving myself and I believe everyone is special and unique in their own way and should embrace that.
-</p>
+      <p>I am currently 17 years old and a rising senior attending Mount Olive High School in New Jersey. I joined Girls Who Code because I have always been interested in computer science, but never had the mentors or guidance to actually pursue it. I chose to do this project because since I was a little girl I have struggled with my body and loving myself and I believe everyone is special and unique in their own way and should embrace that. To contact me click <a href="https://www.linkedin.com/in/drisha-mishra-863625133/">here.</a></p>
 
-<a href= "slide9.html" class= "left">
+  <a href= "slide9.html" class= "left">
     <button type="button" class="btn btn-default" aria-label="Left Align">
       <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
     </button>
   </a>
-
-<!--Script to link jquery.fullPage.js-->
-    <script type="text/javascript" src="jquery.fullPage.js"></script>
-    <!--Script for fullpage.js-->
-    <script type="text/javascript">
-      $(document).ready(function() {
-        $('#fullpage').fullpage({
-          bigSectionsDestination: top,
-          controlArrows: false,
-          anchors:['header', 'slide1', 'slide2', 'slide3', 'slide4', 'slide5', 'slide6']});});
-    </script>
 
   </body>
 </html>
