--- a/slide4.html
+++ b/slide4.html
@@ -5,11 +5,11 @@
   <head>
 
     <meta charset="utf-8">
-    <title> Spotlight Story </title>
+    <title>Luv Yourself</title>
     <link rel="stylesheet" href="slide4.css">
     <link rel="stylesheet" href="">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Amaranth:700|Hind|Leckerli+One" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Josefin+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>    
     <link rel="stylesheet" type="text/css" href="jquery.fullPage.css" />
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
@@ -26,15 +26,15 @@
   </div>
 
 <div class="section">
-  <p>As a young girl, Demi Lovato found herself unhappy with her body. Even before she became a celebrity she felt insecure about the way her body was changing and had body image issues. Lovato believed she was “too big” and began purging. She did not like the way she looked because her body was different from the celebrities she would see on TV and magazines. </p>
+  <p>As a young girl, Demi Lovato found herself unhappy with her body. Even before she became a celebrity she felt insecure about the way her body was changing and had body image issues. Lovato believed she was “too big” and began purging. She did not like the way she looked because her body was different from the celebrities she would see on TV and magazines.</p>
 </div>
 
 <div class="section">
-  <p>At the age of 18, she checked herself into rehab because she realized it was not okay for her to feel that way. She was diagnosed with bulimia and bipolar disorder. </p>
+  <p>At the age of 18, she checked herself into rehab because she realized it was not okay for her to feel that way. She was diagnosed with bulimia and bipolar disorder.</p>
 </div>
 
 <div class="section">
-  <p> Now, Demi Lovato is one of the advocates of body positivity. She encourages women to empower themselves physically, mentally, and spiritually by learning to be grateful for their bodies and taking care of them. Demi Lovato is just one of the many people that struggled with being confident in their bodies and is an example to many young women. If Demi Lovato can do it, so can you! </p>
+  <p>Now, Demi Lovato is one of the advocates of body positivity. She encourages women to empower themselves physically, mentally, and spiritually by learning to be grateful for their bodies and taking care of them. Demi Lovato is just one of the many people that struggled with being confident in their bodies and is an example to many young women. If Demi Lovato can do it, so can you!</p>
 </div>
 
 </div>
@@ -67,5 +67,5 @@
     </script>
 
 
-</body>
+  </body>
 </html>
