--- a/slide2.html
+++ b/slide2.html
@@ -12,7 +12,8 @@
 
   </head>
   <body>
-
+ <div id="fullpage">
+   <div class="section">
     <div id="heading">
     <h1>Our Mission</h1>
   </div>
@@ -20,9 +21,11 @@
     <br>
     <br>
     <br>
-  <div>
+  </div>
+  <div class="section">
     <p> We are a group of high schoolers who feel very passionate about body positivity and loving yourself. As teenagers living in 2017, we have all felt like we aren’t good enough, whether that be in mind or body. <br> By creating this website, we hope to promote body positivity and raise awareness for those who suffer from body image issues. We hope this will inspire others to feel better about who they are and how they look.</p>
   </div>
+</div>
 
   <a href="index.html" class="left">
     <button type="button" class="btn btn-default" aria-label="Left Align">
