--- a/slide7.html
+++ b/slide7.html
@@ -18,7 +18,7 @@
 
   <div id="fullpage">
   <div class="section">
-    <h1>How to Build Your Confidence</h1>
+    <h1>How to Build <br>Your Confidence</h1>
   </div>
     <div class="section">
       <img src="http://www.comedycentral.co.uk/sites/default/files/styles/image-w-1200-h-600-scale-crop/public/mtv_uk/arc/2014/05/27/f8bf5a4f-0745-45e6-b57a-3cc95f1bd3cf.jpg?itok=neQ-BYZn" alt="friends">
