--- a/slide4.html
+++ b/slide4.html
@@ -9,13 +9,26 @@
     <link rel="stylesheet" href="slide4.css">
     <link rel="stylesheet" href="">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link href='http://fonts.googleapis.com/css?family=Josefin+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>    
+    <link href='http://fonts.googleapis.com/css?family=Josefin+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="jquery.fullPage.css" />
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
   </head>
 
 <body>
+
+  <ul class = "nav">
+    <li class="li_nav"><a href="index.html">Home</a></li>
+    <li class="li_nav"><a href="slide2.html">Mission</a></li>
+    <li class="li_nav"><a href="slide3.html">Reason</a></li>
+    <li class="li_nav"><a href="slide4.html">Spotlight</a></li>
+    <li class="li_nav"><a href="slide5.html">Quote</a></li>
+    <li class="li_nav"><a href="slide6.html">BDD</a></li>
+    <li class="li_nav"><a href="slide7.html">Tips</a></li>
+    <li class="li_nav"><a href="slide9.html">Sources</a></li>
+    <li class="li_nav"><a href="slide10.html">About</a></li>
+    <li class="li_nav" id="brand" style="float:right"><a class="active" href="#about">Love Yourself</a></li>
+  </ul>
 
 <div id="fullpage">
   <div class="section">
