--- a/slide10.html
+++ b/slide10.html
@@ -15,8 +15,21 @@
 
   <body>
 
+    <ul class = "nav">
+      <li class="li_nav"><a href="index.html">Home</a></li>
+      <li class="li_nav"><a href="slide2.html">Mission</a></li>
+      <li class="li_nav"><a href="slide3.html">Reason</a></li>
+      <li class="li_nav"><a href="slide4.html">Spotlight</a></li>
+      <li class="li_nav"><a href="slide5.html">Quote</a></li>
+      <li class="li_nav"><a href="slide6.html">BDD</a></li>
+      <li class="li_nav"><a href="slide7.html">Tips</a></li>
+      <li class="li_nav"><a href="slide9.html">Sources</a></li>
+      <li class="li_nav"><a href="slide10.html">About</a></li>
+      <li class="li_nav" id="brand" style="float:right"><a class="active" href="#about">Love Yourself</a></li>
+    </ul>
+
       <h1>About Us</h1>
-        <h3>Meet the creators of Luv Yourself!</h3>
+        <h3>Meet the creators of Love Yourself!</h3>
         <br>
         <br>
     <div class="nataliehead">
