--- a/slide9.html
+++ b/slide9.html
@@ -16,6 +16,19 @@
 
   </head>
 
+  <ul class = "nav">
+    <li class="li_nav"><a href="index.html">Home</a></li>
+    <li class="li_nav"><a href="slide2.html">Mission</a></li>
+    <li class="li_nav"><a href="slide3.html">Reason</a></li>
+    <li class="li_nav"><a href="slide4.html">Spotlight</a></li>
+    <li class="li_nav"><a href="slide5.html">Quote</a></li>
+    <li class="li_nav"><a href="slide6.html">BDD</a></li>
+    <li class="li_nav"><a href="slide7.html">Tips</a></li>
+    <li class="li_nav"><a href="slide9.html">Sources</a></li>
+    <li class="li_nav"><a href="slide10.html">About</a></li>
+    <li class="li_nav" id="brand" style="float:right"><a class="active" href="#about">Love Yourself</a></li>
+  </ul>
+
   <body>
     <div id="fullpage">
       <div class="section">
