--- a/slide6.html
+++ b/slide6.html
@@ -9,7 +9,7 @@
     <link href='http://fonts.googleapis.com/css?family=Josefin+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="jquery.fullPage.css" />
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-
+<link href='https://fonts.googleapis.com/css?family=Cardo' rel='stylesheet' type='text/css'>
     <title>Luv Yourself</title>
 
   </head>
@@ -26,7 +26,7 @@
       <li class="li_nav"><a href="slide7.html">Tips</a></li>
       <li class="li_nav"><a href="slide9.html">Sources</a></li>
       <li class="li_nav"><a href="slide10.html">About</a></li>
-      <li class="li_nav" id="brand" style="float:right"><a class="active" href="#about">Love Yourself</a></li>
+      <li class="li_nav" id="brand" style="float:right"><a class="active" href="#about"></a></li>
     </ul>
 
 <div id="fullpage">
