--- a/slide3.html
+++ b/slide3.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href='http://fonts.googleapis.com/css?family=Josefin+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="jquery.fullPage.css" />
+    <link href='https://fonts.googleapis.com/css?family=Cardo' rel='stylesheet' type='text/css'>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
   </head>
@@ -26,7 +27,7 @@
     <li class="li_nav"><a href="slide7.html">Tips</a></li>
     <li class="li_nav"><a href="slide9.html">Sources</a></li>
     <li class="li_nav"><a href="slide10.html">About</a></li>
-    <li class="li_nav" id="brand" style="float:right"><a class="active" href="#about">Love Yourself</a></li>
+    <li class="li_nav" id="brand" style="float:right"><a class="active" href="#about"></a></li>
   </ul>
 
  <div id="fullpage">
