--- a/slide5.html
+++ b/slide5.html
@@ -30,8 +30,7 @@
     </ul>
 
     <div class="container">
-      <h2> Life is way too short to spend another day at war with yourself. </h2>
-      <h2 id=quote> Anonymous </h2>
+      <img src="quote.png" alt="quote">
     </div>
 
   <a href="slide4.html" class="left">
