--- a/slide4.html
+++ b/slide4.html
@@ -53,7 +53,7 @@
 
 </div>
 
-<a href="slide3.html" class= left>
+<a href="slide3.html" class= "left">
   <button type="button" class="btn btn-default" aria-label="Left Align">
     <span class="glyphicon glyphicon-chevron-left" aria-hidden="true">
     </span>
