--- a/slide10.html
+++ b/slide10.html
@@ -7,16 +7,31 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <link rel="stylesheet" href="slide10.css">
     <link href='http://fonts.googleapis.com/css?family=Josefin+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Cardo' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="jquery.fullPage.css" />
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <title>Luv Yourself</title>
+    <title>Love Yourself - About Us </title>
 
   </head>
 
   <body>
 
+    <ul class = "nav">
+          <li class="li_nav"><a href="index.html">Home</a></li>
+          <li class="li_nav"><a href="slide2.html">Mission</a></li>
+          <li class="li_nav"><a href="slide3.html">Reason</a></li>
+          <li class="li_nav"><a href="slide4.html">Spotlight</a></li>
+          <li class="li_nav"><a href="slide5.html">Quote</a></li>
+          <li class="li_nav"><a href="slide6.html">BDD</a></li>
+          <li class="li_nav"><a href="slide7.html">Tips</a></li>
+          <li class="li_nav"><a href="slide9.html">Sources</a></li>
+          <li class="li_nav"><a href="slide10.html">About</a></li>
+          <li class="li_nav" id="brand" style="float:right"><a class="active" href="#about"></a></li>
+        </ul>
+
+<div class="fullpage">
       <h1>About Us</h1>
-        <h3>Meet the creators of Luv Yourself!</h3>
+        <h3>Meet the creators of Love Yourself !</h3>
         <br>
         <br>
     <div class="nataliehead">
@@ -50,6 +65,8 @@
       <img src="drisha.jpg" class="img-circle" alt="drisha" style="width:200px;height:200px;">
     </div>
       <p>I am currently 17 years old and a rising senior attending Mount Olive High School in New Jersey. I joined Girls Who Code because I have always been interested in computer science, but never had the mentors or guidance to actually pursue it. I chose to do this project because since I was a little girl I have struggled with my body and loving myself and I believe everyone is special and unique in their own way and should embrace that. To contact me click <a href="https://www.linkedin.com/in/drisha-mishra-863625133/">here.</a></p>
+
+</div>
 
   <a href= "slide9.html" class= "left">
     <button type="button" class="btn btn-default" aria-label="Left Align">
