--- a/slide4.html
+++ b/slide4.html
@@ -5,11 +5,12 @@
   <head>
 
     <meta charset="utf-8">
-    <title>Luv Yourself</title>
-    <link rel="stylesheet" href="slide4.css">
-    <link rel="stylesheet" href="">
+    <title>Love Yourself - Spotlight Story </title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link href='http://fonts.googleapis.com/css?family=Josefin+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>    
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+      <link rel="stylesheet" href="slide4.css">
+    <link href='http://fonts.googleapis.com/css?family=Josefin+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Cardo' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="jquery.fullPage.css" />
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
@@ -17,11 +18,25 @@
 
 <body>
 
+  <ul class = "nav">
+      <li class="li_nav"><a href="index.html">Home</a></li>
+      <li class="li_nav"><a href="slide2.html">Mission</a></li>
+      <li class="li_nav"><a href="slide3.html">Reason</a></li>
+      <li class="li_nav"><a href="slide4.html">Spotlight</a></li>
+      <li class="li_nav"><a href="slide5.html">Quote</a></li>
+      <li class="li_nav"><a href="slide6.html">BDD</a></li>
+      <li class="li_nav"><a href="slide7.html">Tips</a></li>
+      <li class="li_nav"><a href="slide9.html">Sources</a></li>
+      <li class="li_nav"><a href="slide10.html">About</a></li>
+      <li class="li_nav" id="brand" style="float:right"><a class="active" href="#about"></a></li>
+    </ul>
+
+
 <div id="fullpage">
   <div class="section">
     <h1>Spotlight Story</h1>
       <div class="container">
-        <img src="demi.jpg" class="rounded mx-auto d-block" alt="campaign picture" width= 400 height = 500 >
+        <img src="demi.jpg" class="rounded mx-auto d-block" alt="campaign picture" width= 400 height = 450 >
       </div>
   </div>
 
@@ -39,7 +54,7 @@
 
 </div>
 
-<a href="slide3.html" class= left>
+<a href="slide3.html" class= "left">
   <button type="button" class="btn btn-default" aria-label="Left Align">
     <span class="glyphicon glyphicon-chevron-left" aria-hidden="true">
     </span>
@@ -51,8 +66,6 @@
     </span>
   </button>
 </a>
-
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 
 
   <!--Script to link jquery.fullPage.js-->
