--- a/slide5.html
+++ b/slide5.html
@@ -10,14 +10,27 @@
     <link href='http://fonts.googleapis.com/css?family=Josefin+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="jquery.fullPage.css" />
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <link href='https://fonts.googleapis.com/css?family=Cardo' rel='stylesheet' type='text/css'>
 
   </head>
 
   <body>
 
+    <ul class = "nav">
+      <li class="li_nav"><a href="index.html">Home</a></li>
+      <li class="li_nav"><a href="slide2.html">Mission</a></li>
+      <li class="li_nav"><a href="slide3.html">Reason</a></li>
+      <li class="li_nav"><a href="slide4.html">Spotlight</a></li>
+      <li class="li_nav"><a href="slide5.html">Quote</a></li>
+      <li class="li_nav"><a href="slide6.html">BDD</a></li>
+      <li class="li_nav"><a href="slide7.html">Tips</a></li>
+      <li class="li_nav"><a href="slide9.html">Sources</a></li>
+      <li class="li_nav"><a href="slide10.html">About</a></li>
+      <li class="li_nav" id="brand" style="float:right"><a class="active" href="#about"<f</a></li>
+    </ul>
+
     <div class="container">
-      <h2> Life is way too short to spend another day at war with yourself. </h2>
-      <h2 id=quote> Anonymous </h2>
+      <img src="quote.png" alt="quote">
     </div>
 
   <a href="slide4.html" class="left">
