--- a/index.html
+++ b/index.html
@@ -6,18 +6,37 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <link rel= "stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Amaranth:700|Hind|Leckerli+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans&subset=latin,latin-ext" rel="stylesheet"type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Cardo' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="jquery.fullPage.css" />
  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <title> Love Yourself! </title>
+    <title> Love Yourself - Home Page </title>
   </head>
   <body>
-    <h1> Luv Yourself &#9829;</h1>
+    <ul class = "nav">
+      <li class="li_nav"><a href="index.html">Home</a></li>
+      <li class="li_nav"><a href="slide2.html">Mission</a></li>
+      <li class="li_nav"><a href="slide3.html">Reason</a></li>
+      <li class="li_nav"><a href="slide4.html">Spotlight</a></li>
+      <li class="li_nav"><a href="slide5.html">Quote</a></li>
+      <li class="li_nav"><a href="slide6.html">BDD</a></li>
+      <li class="li_nav"><a href="slide7.html">Tips</a></li>
+      <li class="li_nav"><a href="slide9.html">Sources</a></li>
+      <li class="li_nav"><a href="slide10.html">About</a></li>
+      <li class="li_nav" id="brand" style="float:right"><a class="active" href="#about"></a></li>
+    </ul>
+
     <a href="slide2.html" class="right">
       <button type="button" class="btn btn-default" aria-label="Left Align">
         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
       </button>
     </a>
+
+    <h1> Love Yourself &#9829;</h1>
+    <br>
+    <br>
+    <h1 class="sub"> Body Positivity <br> Awareness Campaign <h1>
+
     <!--Script to link jquery.fullPage.js-->
     <script type="text/javascript" src="jquery.fullPage.js"></script>
     <!--Script for fullpage.js-->
