--- a/slide2.html
+++ b/slide2.html
@@ -2,50 +2,67 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Luv Yourself</title>
+    <title>Love Yourself - Our Mission </title>
     <link rel="stylesheet" href="">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="slide2.css">
     <link href='http://fonts.googleapis.com/css?family=Josefin+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Cardo' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="jquery.fullPage.css" />
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
   </head>
   <body>
+    <ul class = "nav">
+      <li class="li_nav"><a href="index.html">Home</a></li>
+      <li class="li_nav"><a href="slide2.html">Mission</a></li>
+      <li class="li_nav"><a href="slide3.html">Reason</a></li>
+      <li class="li_nav"><a href="slide4.html">Spotlight</a></li>
+      <li class="li_nav"><a href="slide5.html">Quote</a></li>
+      <li class="li_nav"><a href="slide6.html">BDD</a></li>
+      <li class="li_nav"><a href="slide7.html">Tips</a></li>
+      <li class="li_nav"><a href="slide9.html">Sources</a></li>
+      <li class="li_nav"><a href="slide10.html">About</a></li>
+      <li class="li_nav" id="brand" style="float:right"><a class="active" href="#about"></a></li>
+    </ul>
 
-    <div id="heading">
-    <h1>Our Mission</h1>
-  </div>
-    <img src="" alt="picture of us" width= 450px height= 450px class = "pic">
-    <br>
-    <br>
-    <br>
-  <div>
-    <p> We are a group of high schoolers who feel very passionate about body positivity and loving yourself. As teenagers living in 2017, we have all felt like we aren’t good enough, whether that be in mind or body. <br> By creating this website, we hope to promote body positivity and raise awareness for those who suffer from body image issues. We hope this will inspire others to feel better about who they are and how they look.</p>
-  </div>
+    <div id="fullpage">
+       <div class="section">
+        <div id="heading">
+        <h1>Our Mission</h1>
+      </div>
+        <img src="" alt="picture of us" width= 450px height= 450px class = "pic">
+        <br>
+        <br>
+        <br>
+      </div>
+      <div class="section">
+        <p> We are a group of high schoolers who feel very passionate about body positivity and loving yourself. As teenagers living in 2017, we have all felt like we aren’t good enough, whether that be in mind or body. <br> By creating this website, we hope to promote body positivity and raise awareness for those who suffer from body image issues. We hope this will inspire others to feel better about who they are and how they look.</p>
+      </div>
+    </div>
 
-  <a href="index.html" class="left">
-    <button type="button" class="btn btn-default" aria-label="Left Align">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    </button>
-  </a>
-  <a href="slide3.html" class="right">
-    <button type="button" class="btn btn-default" aria-label="Left Align">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    </button>
-  </a>
+      <a href="index.html" class="left">
+        <button type="button" class="btn btn-default" aria-label="Left Align">
+          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        </button>
+      </a>
+      <a href="slide3.html" class="right">
+        <button type="button" class="btn btn-default" aria-label="Left Align">
+          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        </button>
+      </a>
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-  <!--Script to link jquery.fullPage.js-->
-    <script type="text/javascript" src="jquery.fullPage.js"></script>
-    <!--Script for fullpage.js-->
-    <script type="text/javascript">
-      $(document).ready(function() {
-        $('#fullpage').fullpage({
-          bigSectionsDestination: top,
-          controlArrows: false,
-          anchors:['header', 'slide1', 'slide2', 'slide3', 'slide4', 'slide5', 'slide6']});});
-    </script>
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+      <!--Script to link jquery.fullPage.js-->
+        <script type="text/javascript" src="jquery.fullPage.js"></script>
+        <!--Script for fullpage.js-->
+        <script type="text/javascript">
+          $(document).ready(function() {
+            $('#fullpage').fullpage({
+              bigSectionsDestination: top,
+              controlArrows: false,
+              anchors:['header', 'slide1', 'slide2', 'slide3', 'slide4', 'slide5', 'slide6']});});
+        </script>
 
-  </body>
-</html>
+      </body>
+    </html>
