--- a/slide3.html
+++ b/slide3.html
@@ -5,10 +5,11 @@
   <head>
 
     <meta charset="utf-8">
-    <title>Luv Yourself</title>
+    <title>Love Yourself - Why You Should Love Yourself </title>
     <link rel="stylesheet" href="slide3.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href='http://fonts.googleapis.com/css?family=Josefin+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Cardo' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="jquery.fullPage.css" />
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
@@ -16,31 +17,66 @@
 
 <body>
 
+  <ul class = "nav">
+        <li class="li_nav"><a href="index.html">Home</a></li>
+        <li class="li_nav"><a href="slide2.html">Mission</a></li>
+        <li class="li_nav"><a href="slide3.html">Reason</a></li>
+        <li class="li_nav"><a href="slide4.html">Spotlight</a></li>
+        <li class="li_nav"><a href="slide5.html">Quote</a></li>
+        <li class="li_nav"><a href="slide6.html">BDD</a></li>
+        <li class="li_nav"><a href="slide7.html">Tips</a></li>
+        <li class="li_nav"><a href="slide9.html">Sources</a></li>
+        <li class="li_nav"><a href="slide10.html">About</a></li>
+        <li class="li_nav" id="brand" style="float:right"><a class="active" href="#about"></a></li>
+      </ul>
+
+
  <div id="fullpage">
     <div class="section">
+      <div class="page">
       <h1>Why Girls Should Love Themselves</h1>
+    </div>
       <div class="container">
         <img src="Bodypos.jpg" class="rounded mx-auto d-block" alt="campaign picture" height = "360">
       </div>
   </div>
 
   <div class="section">
-    <p>All women come in different shapes and sizes. Body positivity is about accepting and loving the body that you are in and accepting that your body may change and that’s okay. As teenage girls we become infatuated with the idea of having the bodies that the celebrities we follow have and forget that our bodies are beautiful too. You do not have to love your body 24/7, but do understand that all bodies are valuable. </p>
+    <p> Body positivity is about accepting and loving the body that you are in and accepting that your body may change and that’s okay. As teenage girls we become infatuated with the idea of having the bodies that the celebrities we follow have and forget that our bodies are beautiful too. You do not have to love your body 24/7, but do understand that all bodies are beautiful. </p>
+    <img src="rant.jpg" alt="" id="rant">
   </div>
 
   <div class="section">
-    <p>It is critical that you make the distinction that your body does not determine your worth as a person. No matter what you look like you are still beautiful. Your appearance does not define who you are and should not limit what you want to do. It’s important to stop forcing yourself to fit into an impossible cultural standard. </p>
+    <p> Your appearance does not define who you are and should not limit what you want to do. It’s important to stop forcing yourself to fit into an impossible cultural standard. Get out there and have fun ! </p>
+    <img src="tie.jpg" alt="" id="tie">
+
   </div>
 
   <div class="section">
-    <p>We are all women and should empower each other not tear each other down. It’s also important to acknowledge that if you are unhealthy or wish to change yourself doesn’t mean that you are not beautiful. Going to the gym and wanting to work out is not a bad thing, but it should not be done because you want to look like someone else but rather because you want healthier and happier lifestyle. </p>
+    <p>We are all women and should empower each other not tear each other down. It’s also important to acknowledge that if you are unhealthy or wish to change yourself doesn’t mean that you are not beautiful. Going to the gym is not bad, but it should not be done because you want to look like someone else but rather because you want a healthier and happier lifestyle. </p>
+    <img src="open.jpg" alt="" id="open">
   </div>
 
   <div class="section">
     <p>We know that by exploring our website you will not automatically love your body, but we hope it steers you in a journey of self-love.</p>
+    <img src="selflove.jpg" alt="" id="pic">
   </div>
+</div>
 
-  </div>
+  <a href="slide2.html" class= "left">
+    <button type="button" class="btn btn-default" aria-label="Left Align">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true">
+      </span>
+    </button>
+  </a>
+
+  <a href="slide4.html" class = "right">
+    <button type="button" class="btn btn-default" aria-label="Left Align">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true">
+      </span>
+    </button>
+  </a>
+
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 
 <a href="slide2.html" class= "left">
@@ -56,6 +92,7 @@
     </span>
   </button>
 </a>
+
 
 <!--Script to link jquery.fullPage.js-->
     <script type="text/javascript" src="jquery.fullPage.js"></script>
