--- a/slide6.html
+++ b/slide6.html
@@ -2,40 +2,55 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <link rel="stylesheet" href="slide6.css">
     <link href='http://fonts.googleapis.com/css?family=Josefin+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Cardo' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="jquery.fullPage.css" />
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
-    <title>Luv Yourself</title>
+    <title>Love Yourself - Body Dysmorphia </title>
 
   </head>
 
   <body>
 
+    <ul class = "nav">
+          <li class="li_nav"><a href="index.html">Home</a></li>
+          <li class="li_nav"><a href="slide2.html">Mission</a></li>
+          <li class="li_nav"><a href="slide3.html">Reason</a></li>
+          <li class="li_nav"><a href="slide4.html">Spotlight</a></li>
+          <li class="li_nav"><a href="slide5.html">Quote</a></li>
+          <li class="li_nav"><a href="slide6.html">BDD</a></li>
+          <li class="li_nav"><a href="slide7.html">Tips</a></li>
+          <li class="li_nav"><a href="slide9.html">Sources</a></li>
+          <li class="li_nav"><a href="slide10.html">About</a></li>
+          <li class="li_nav" id="brand" style="float:right"><a class="active" href="#about"></a></li>
+        </ul>
+
 <div id="fullpage">
 
   <div class="section">
-    <h1>Body Dismorphic Disorder (BDD)</h1>
-    <p>Body image disorder is characterized by persistent and intrusive preoccupations with an imagined or slight defect in one's appearance.
+    <h1 id="lol">Body Dysmorphic Disorder (BDD)</h1>
+  </div>
+  <div class="section">
+    <p class="paragraph">Body image disorder is characterized by persistent and intrusive preoccupations with an imagined or slight defect in one's appearance.
 The flaw is usually insignificant but those who suffer from BDD view their flaws as significant and prominent, often causing severe emotional distress and difficulties in daily functioning.<br>
 BDD mostly develops in adolescents and teens. Research shows that it affects men and women almost equally. About one percent of the U.S. population has BDD.<br>
 It is important to note that not everyone who deals with body image issues suffers from a mental disorder. Please keep this mind as you read the rest of this page.</p>
   </div>
 
-<div class="section">
+<div class="section" id="causes">
   <h3>Causes</h3>
   <p>The causes for body dysmorphic disorder include:</p>
     <li>Genetic predisposition</li>
     <li>Neurobiological factors (ex. malfunctioning of serotonin in the brain)</li>
     <li>Personality traits</li>
-    <li>Life experiences</li><
+    <li>Life experiences</li>
   </div>
 
-  <div class="section">
+  <div class="section" id="symptoms">
   <h3>Symptoms</h3>
     <li>Camouflaging (with body position, clothing, makeup, hair, hats, etc.)</li>
     <li>Comparing body part to others' appearance</li>
@@ -48,7 +63,7 @@ It is important to note that not everyone who deals with body image issues suffe
     <li>Changing clothes excessively</li>
   </div>
 
-    <div class="section">
+    <div class="section" id="treatment">
         <h3>Treatment</h3>
       <p>Talk to a doctor or a medical professional.</p>
         <img src="http://images.huffingtonpost.com/2014-11-05-Fotolia_24725585_S-thumb.jpg" alt="bdd">
@@ -57,7 +72,7 @@ It is important to note that not everyone who deals with body image issues suffe
 
 </div>
 
-<a href="slide5.html" class = left>
+<a href="slide5.html" class = "left">
   <button type="button" class="btn btn-default" aria-label="Left Align">
     <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
   </button>
