--- a/slide7.html
+++ b/slide7.html
@@ -2,12 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Luv Yourself</title>
+    <title>Love Yourself - Tips ! </title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <link rel="stylesheet" href="slide7.css">
     <link href='http://fonts.googleapis.com/css?family=Josefin+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Cardo' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="jquery.fullPage.css">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
@@ -15,10 +16,23 @@
 
   <body>
 
+    <ul class = "nav">
+          <li class="li_nav"><a href="index.html">Home</a></li>
+          <li class="li_nav"><a href="slide2.html">Mission</a></li>
+          <li class="li_nav"><a href="slide3.html">Reason</a></li>
+          <li class="li_nav"><a href="slide4.html">Spotlight</a></li>
+          <li class="li_nav"><a href="slide5.html">Quote</a></li>
+          <li class="li_nav"><a href="slide6.html">BDD</a></li>
+          <li class="li_nav"><a href="slide7.html">Tips</a></li>
+          <li class="li_nav"><a href="slide9.html">Sources</a></li>
+          <li class="li_nav"><a href="slide10.html">About</a></li>
+          <li class="li_nav" id="brand" style="float:right"><a class="active" href="#about"></a></li>
+        </ul>
+
 
   <div id="fullpage">
   <div class="section">
-    <h1>How to Build Your Confidence</h1>
+    <h1>How to Build <br> Your Confidence</h1>
   </div>
     <div class="section">
       <img src="http://www.comedycentral.co.uk/sites/default/files/styles/image-w-1200-h-600-scale-crop/public/mtv_uk/arc/2014/05/27/f8bf5a4f-0745-45e6-b57a-3cc95f1bd3cf.jpg?itok=neQ-BYZn" alt="friends">
