--- a/slide6.html
+++ b/slide6.html
@@ -9,20 +9,19 @@
     <link href='https://fonts.googleapis.com/css?family=Cardo' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="jquery.fullPage.css" />
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<<<<<<< HEAD
+
 
     <title>Love Yourself - Body Dysmorphia </title>
-=======
 <link href='https://fonts.googleapis.com/css?family=Cardo' rel='stylesheet' type='text/css'>
-    <title>Luv Yourself</title>
->>>>>>> 08b4010e5835097fb3914a17bd72c638aeb21c58
+    <title>Love Yourself</title>
+
 
   </head>
 
   <body>
 
     <ul class = "nav">
-<<<<<<< HEAD
+
           <li class="li_nav"><a href="index.html">Home</a></li>
           <li class="li_nav"><a href="slide2.html">Mission</a></li>
           <li class="li_nav"><a href="slide3.html">Reason</a></li>
@@ -34,19 +33,6 @@
           <li class="li_nav"><a href="slide10.html">About</a></li>
           <li class="li_nav" id="brand" style="float:right"><a class="active" href="#about"></a></li>
         </ul>
-=======
-      <li class="li_nav"><a href="index.html">Home</a></li>
-      <li class="li_nav"><a href="slide2.html">Mission</a></li>
-      <li class="li_nav"><a href="slide3.html">Reason</a></li>
-      <li class="li_nav"><a href="slide4.html">Spotlight</a></li>
-      <li class="li_nav"><a href="slide5.html">Quote</a></li>
-      <li class="li_nav"><a href="slide6.html">BDD</a></li>
-      <li class="li_nav"><a href="slide7.html">Tips</a></li>
-      <li class="li_nav"><a href="slide9.html">Sources</a></li>
-      <li class="li_nav"><a href="slide10.html">About</a></li>
-      <li class="li_nav" id="brand" style="float:right"><a class="active" href="#about"></a></li>
-    </ul>
->>>>>>> 08b4010e5835097fb3914a17bd72c638aeb21c58
 
 <div id="fullpage">
 
