--- a/slide5.html
+++ b/slide5.html
@@ -3,7 +3,7 @@
   <head>
 
     <meta charset="utf-8">
-    <title>Luv Yourself</title>
+    <title>Love Yourself - Quote </title>
     <link rel="stylesheet" href="slide5.css">
     <link rel="stylesheet" href="">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
