--- a/slide6.html
+++ b/slide6.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!<DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -10,18 +10,13 @@
     <link rel="stylesheet" type="text/css" href="jquery.fullPage.css" />
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
-
     <title>Love Yourself - Body Dysmorphia </title>
-<link href='https://fonts.googleapis.com/css?family=Cardo' rel='stylesheet' type='text/css'>
-    <title>Love Yourself</title>
-
 
   </head>
 
   <body>
 
     <ul class = "nav">
-
           <li class="li_nav"><a href="index.html">Home</a></li>
           <li class="li_nav"><a href="slide2.html">Mission</a></li>
           <li class="li_nav"><a href="slide3.html">Reason</a></li>
