--- a/slide10.html
+++ b/slide10.html
@@ -16,7 +16,7 @@
 
   <body>
 
-    <ul class = "nav">
+    <ul class = "navbar-fixed-top nav">
           <li class="li_nav"><a href="index.html">Home</a></li>
           <li class="li_nav"><a href="slide2.html">Mission</a></li>
           <li class="li_nav"><a href="slide3.html">Reason</a></li>
@@ -24,6 +24,7 @@
           <li class="li_nav"><a href="slide5.html">Quote</a></li>
           <li class="li_nav"><a href="slide6.html">BDD</a></li>
           <li class="li_nav"><a href="slide7.html">Tips</a></li>
+          <li class="li_nav"><a href="slide8.html">Camera</a></li>
           <li class="li_nav"><a href="slide9.html">Sources</a></li>
           <li class="li_nav"><a href="slide10.html">About</a></li>
           <li class="li_nav" id="brand" style="float:right"><a class="active" href="#about"></a></li>
@@ -31,7 +32,7 @@
 
 <div class="fullpage">
       <h1>About Us</h1>
-        <h3>Meet the creators of Love Yourself !</h3>
+        <h3>Meet the creators of Love Yourself!</h3>
         <br>
         <br>
     <div class="nataliehead">
@@ -40,7 +41,7 @@
     <div class="natalie">
       <img src="natalie.jpg" class="img-circle" alt="natalie" style="width:200x;height:200px;">
     </div>
-      <p>I am currently a 17 year old rising senior attending James Madison High School in Brooklyn. I joined Girls Who Code because I greatly enjoyed the two coding classes I took in school, and wanted to learn more about the subject. The world is moving in the direction of technology, and I wish to be a part of it. I love to read, play video games, hang out with friends, and snack on sweets in my free time, when I’m not stressing out over school. To contact me, click <a href="https://www.linkedin.com/in/natalie-cohen-a86b52145/">here.</a></p>
+      <p>I am currently 17 years old and a rising senior attending James Madison High School in Brooklyn. I joined Girls Who Code because I greatly enjoyed the two coding classes I took in school, and wanted to learn more about the subject. The world is moving in the direction of technology, and I wish to be a part of it. I love to read, play video games, hang out with friends, and snack on sweets in my free time, when I’m not stressing out over school. To contact me, click <a href="https://www.linkedin.com/in/natalie-cohen-a86b52145/">here.</a></p>
 
     <div class="marihead">
       <h2>Marisleysis De La Cruz</h2>
